# ccpp-framework

./: CMakeLists.txt  CODEOWNERS
.github/workflows/: capgen_unit_tests.yaml  python.yaml
cmake/: ccpp_capgen.cmake
schema/: suite_v1_0.xsd  suite_v2_0.xsd
scripts/: ccpp_capgen.py  ccpp_datafile.py  ccpp_suite.py  ddt_library.py  framework_env.py  host_cap.py  host_model.py  metadata2html.py  metadata_parser.py  metadata_table.py  metavar.py  metavar_prebuild.py  mkcap.py  mkstatic.py  suite_objects.py  ufs_depends.py  var_props.py
scripts/fortran_tools/: fortran_write.py  offline_check_fortran_vs_metadata.py  parse_fortran.py  parse_fortran_file.py
scripts/parse_tools/: __init__.py  parse_checkers.py  xml_tools.py
src/: CMakeLists.txt  ccpp_types.F90
test/: CMakeLists.txt  README.md  test_offline_metadata_checker.sh  test_stub.py
test/advection_test/: README.md
test/capgen_test/: CMakeLists.txt  README.md  capgen_test_reports.py  ddt2.F90  make_ddt.F90  run_test  temp_adjust.F90  temp_calc_adjust.F90  temp_scheme_files.txt  temp_set.F90  temp_suite.xml  test_capgen_host_integration.F90  test_host_data.F90  test_host_mod.F90  test_reports.py
test/ddthost_test/: README.md
test/nested_suite_test/: CMakeLists.txt  README.md  ccpp_kinds.F90  main_suite.xml  radiation2_suite.xml  radiation3_subsuite.xml  radiation3_suite.xml  radiation4_suite.xml  test_nested_suite_integration.F90
test/unit_tests/: test_fortran_parse.py  test_fortran_write.py  test_metadata_table.py  test_sdf.py
test/unit_tests/sample_files/fortran_files/: array_parsing_test.F90
test/unit_tests/sample_suite_files/: another_suite.xml  another_suite2.xml  nested_full_suite.xml  subsuite1.xml  subsuite_inline.xml  suite_bad_v2_duplicate_group.xml  suite_bad_v2_suite_tag.xml  suite_bad_version01.xml  suite_bad_version02.xml  suite_bad_version03.xml  suite_bad_version04.xml  suite_good_v1_test01.xml  suite_good_v1_test02.xml  suite_good_v2_test01.xml  suite_good_v2_test01_exp.xml  suite_good_v2_test02.xml  suite_good_v2_test02_exp.xml  suite_good_v2_test03.xml  suite_good_v2_test03_exp.xml  suite_good_v2_test04.xml  suite_good_v2_test04_exp.xml  suite_missing_file.xml  suite_missing_group.xml  suite_missing_loaded_suite.xml  suite_missing_version.xml  suite_recurse_level2.xml  suite_recurse_level2a.xml  suite_recurse_level3.xml  suite_recurse_level3a.xml  suite_recurse_top1.xml  suite_recurse_top2.xml
test/unit_tests/xmllint_wrapper/: xmllint
test/var_compatibility_test/: CMakeLists.txt  README.md  effrs_calc.F90  run_test  test_host_data.F90  test_host_mod.F90  var_compatibility_test_reports.py
test_prebuild/unit_tests/: test_metadata_parser.py
